--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="foursquare Check-in Hack" default="dist">
-	<property name="dir.src" value="src/java" />
+	<property name="dir.src" value="src/main/java" />
 	<property name="dir.bin" value="bin" />
-	<property name="dir.scripts" value="scripts" />
+	<property name="dir.scripts" value="src/main/resources" />
 	<property name="dir.dist" value="dist" />
 
 	<property name="name.file" value="foursquare-checkin-hack" />
@@ -30,6 +30,7 @@
 		<copy todir="${dir.dist}">
 			<fileset dir="${dir.scripts}" />
 		</copy>
+		<copy file="LICENSE" todir="${dir.dist}" />
 		<zip compress="no" basedir="${dir.src}" destfile="${dir.dist}/${name.file}-src.zip" />
 		<zip compress="no" basedir="${dir.dist}" destfile="${dir.dist}/${name.file}-${version.major}.${version.minor}.zip" />
 	</target>
