Fixed missing help icon references and NPE on startup. Removed stale version from frame title.

--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 
 	<target name="compile" depends="clean">
 		<mkdir dir="${dir.bin}" />
-		<javac srcdir="${dir.src}" destdir="${dir.bin}" source="1.6" />
+		<javac srcdir="${dir.src}" destdir="${dir.bin}" source="1.6" debug="true" />
 		<copy todir="${dir.bin}">
 			<fileset dir="${dir.src}">
 				<exclude name="**/*.java" />
